# opengl-practice

./: .gitmodules  CMakeLists.txt  README.md  todo.md
examples/: CMakeLists.txt
examples/0.1 Hello Window/: main.cpp
examples/0.2 Triangle/: main.cpp
examples/0.3 Shaders/: main.cpp
examples/0.4 Texture2D/: main.cpp
examples/0.5 Transformations/: main.cpp
examples/7.1 Font/: main.cpp
examples/res/shaders/: flatColorShader.fs  flatColorShader.vs
examples/res/shaders/fontShader/: fontShader.fs  fontShader.vs
examples/res/shaders/rotatingTexture/: rotatingTexture.fs  rotatingTexture.vs
examples/res/shaders/textureShader/: textureShader.fs  textureShader.vs
include/opengl_practice/: Font.hpp  Mesh.hpp  Shader.hpp  Texture2D.hpp  Window.hpp  hello.hpp
src/: CMakeLists.txt  Font.cpp  Mesh.cpp  Shader.cpp  Texture2D.cpp  Window.cpp  hello.cpp
